# friman

./: README.md  pyproject.toml
.github/workflows/: release.yaml
friman/: __init__.py  main.py
friman/commands/: current.py  disable.py  download.py  ensurepath.py  install.py  list.py  pushserver.py  uninstall.py  update.py  use.py
friman/utils/: definitions.py  helpers.py  logger.py
